UI Updates Windows now have title bars, user and guild icons are now displayed in the main chat list, the bottom button now has an icon, courtesy of Daniel Taylor. Icons are also now rounded.

--- a/build.gradle
+++ b/build.gradle
@@ -20,4 +20,10 @@ dependencies {
     compile "net.dv8tion:JDA:$jdaVersion"
 }
 
+shadowJar {
+    baseName = 'TransparentDiscord'
+    setDestinationDir(file('build/jar'))
+    classifier = null
+}
+
 compileJava.options.encoding = 'UTF-8'
