Updated the README file Updated the README to reflect the current state of the project.

--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,7 @@ dependencies {
 
 shadowJar {
     baseName = 'TransparentDiscord'
-    setDestinationDir(file('build/jar'))
+    setDestinationDir(file('Prebuilt'))
     classifier = null
 }
 
