--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ plugins {
 }
 
 group 'transparent.discord'
-mainClassName = 'com.transparentdiscord.Main'
+mainClassName = 'com.transparentdiscord.TransparentDiscord'
 
 version '1.0'
 def jdaVersion = '3.0.0_171'
